k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: ivolve

  labels:
    app.kubernetes.io/name: ivolve
    environment: dev
