k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ivolve-app
  namespace: ivolve

  labels:
    app: ivolve-app

spec:
  replicas: 2

  strategy:
    type: RollingUpdate

    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1

  selector:
    matchLabels:
      app: ivolve-app

  template:
    metadata:
      labels:
        app: ivolve-app

    spec:

      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - ivolve-app

              topologyKey: kubernetes.io/hostname

      containers:
        - name: ivolve-app

          image: nginx:1.27-alpine

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 80
              name: http

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /
              port: http

            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: http

            initialDelaySeconds: 15
            periodSeconds: 10
