k8s/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ivolve-app-service
  namespace: ivolve

spec:
  type: ClusterIP

  selector:
    app: ivolve-app

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
